1999-08-18  Tom Yu  <tlyu@mit.edu>

	* etypes.c: Update des3-cbc-sha1 to alignt with new number
	assignments.

	* cksumtypes.c: Update hmac-sha1-des3 to align with new number
	assignments.

Tue May 18 19:52:56 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Remove - from recursive Win32 make invocation.

Mon May 10 15:15:00 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

Tue Jan  5 00:06:02 1999  Tom Yu  <tlyu@mit.edu>

	* make_checksum.c (krb5_c_make_checksum): Note the fact that we're
	punting on dealing with backwards compat with length-included
	checksums.

	* etypes.c: Add ENCTYPE_LOCAL_DES3_HMAC_SHA1 as a temporary
	kludge.  Note that this is added to the end of the array so other
	code can lop off the last member of the array and the right thing
	will happen so that it is possible to disable des3-marc-hmac-sha1
	from the KDC command line, for instance.

	* configure.in: Conditionalize ATHENA_DES3_KLUDGE on
	--enable-athena.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Thu Dec  3 23:37:28 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in: Added missing "cd .." necessary for making this
 		compile under Windows.  Also added missing *.lst files to
 		OBJFILELIST.

Fri Nov  6 10:23:32 1998  Ezra Peisach  <epeisach@mit.edu>

	* keyhash_provider/Makefile.in: Fix to allow building out of the
 	source tree.

Tue Sep 22 21:19:01 1998  Tom Yu  <tlyu@mit.edu>

	* prng.c (krb5_c_random_make_octets): Fix to nfold into 15 bytes,
	not one byte.

Mon Sep 21 15:23:19 1998  Tom Yu  <tlyu@mit.edu>

	* prng.c (krb5_c_random_seed): Fix memory leak.

Mon Sep 14 23:21:17 1998  Tom Yu  <tlyu@mit.edu>

	* old/decrypt.c (krb5_old_decrypt): Fix memory leak.

Tue Sep  1 19:33:38 1998  Tom Yu  <tlyu@mit.edu>

	* etypes.c: Add ETYPE_LOCAL_DES3_HMAC_SHA1 to deal with marc's