@@ -67,6 +67,10 @@ struct krb5_cksumtypes krb5_cksumtypes_list[] = {
       "hmac-sha1-des3", "HMAC-SHA1 DES3 key",
       0, NULL,
       &krb5_hash_sha1 },
+    { CKSUMTYPE_HMAC_SHA1_DES3, KRB5_CKSUMFLAG_DERIVE,
+      "hmac-sha1-des3-kd", "HMAC-SHA1 DES3 key", /* alias */
+      0, NULL,
+      &krb5_hash_sha1 },
 };
 
 int krb5_cksumtypes_length =
